argocd/hello-k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-k8s
  name: hello-k8s
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - image: nthang621/learn-argocd-k8s:v1
          imagePullPolicy: Always
          name: hello-k8s
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
